force-app/main/default/objects/PNNL_Funding_Obligation__c/PNNL_Funding_Obligation__c.object-meta.xml
<CustomObject>
    <label>Funding Obligation</label>
    <nameField>
        <displayFormat>FO-{00000}</displayFormat>
        <label>Funding Obligation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Obligations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>