force-app/main/default/objects/PNNL_Funding_Obligation__c/fields/Fund_Code__c.field-meta.xml
<CustomField>
    <fullName>Fund_Code__c</fullName>
    <label>Fund Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PNNL_Fund_Code__c.PNNL_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PNNL_Fund_Code__c</referenceTo>
    <relationshipLabel>Funding Obligations</relationshipLabel>
    <relationshipName>Budget_Ceiling_Entries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>