force-app/main/default/objects/PNNL_Funding_Obligation__c/fields/Funding_Action__c.field-meta.xml
<CustomField>
    <fullName>Funding_Action__c</fullName>
    <label>Funding Action</label>
    <referenceTo>Funding_Action__c</referenceTo>
    <relationshipName>Budget_Ceiling_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>