force-app/main/default/objects/PNNL_Funding_Obligation__c/fields/PCAS_Obligated__c.field-meta.xml
<CustomField>
    <fullName>PCAS_Obligated__c</fullName>
    <description>Calculation of the Funding Obligation Amounts by the SC Approval Level Amount.</description>
    <formula>PNNL_Amount__c  /  Funding_Action__r.SC_Approved_Level_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Obligated %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>