force-app/main/default/objects/PNNL_Funding_Obligation__c/fields/PNNL_Balance__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Balance__c</fullName>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>