force-app/main/default/objects/PNNL_Funding_Obligation__c/fields/PNNL_Fund_Code_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Fund_Code_Fiscal_Year__c</fullName>
    <formula>TEXT(Fund_Code__r.Fiscal_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Code Fiscal Year</label>
    <type>Text</type>
</CustomField>