force-app/main/default/objects/PNNL_Funding_Obligation__c/fields/PNNL_Sponsor_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Sponsor_Group_Code__c</fullName>
    <formula>Funding_Action__r.Sponsor_Group_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor Group Code</label>
    <type>Text</type>
</CustomField>