force-app/main/default/objects/PNNL_Funding_Obligation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PNNL_Fund_Code_Fiscal_Year__c</columns>
    <columns>PNNL_Amount__c</columns>
    <columns>PNNL_Balance__c</columns>
    <columns>Fund_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>